--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -14,8 +14,10 @@
             <li routerLinkActive="active"><a routerLink="/">Home</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li routerLinkActive="active"><a routerLink="/login">Login</a></li>
-            <li routerLinkActive="active"><a routerLink="/signup">Signup</a></li>
+            <li *ngIf="!authService.loggedIn()" routerLinkActive="active"><a routerLink="/login">Login</a></li>
+            <li *ngIf="!authService.loggedIn()" routerLinkActive="active"><a routerLink="/signup">Signup</a></li>
+            <li  *ngIf="authService.loggedIn()" routerLinkActive="active"><a routerLink="/profile">Profile</a></li>
+            <li  *ngIf="authService.loggedIn()" ><a href="#" (click)="onLogoutclick()">Logout</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
